# ai-invention-bc07ab-join-reproduction-number-epidemiology-in

./: README.md
dataset_iter1_relbench_rel_f1/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_relbench_rel_f1/src/: data.py  extract_relbench_f1.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter1_relbench_rel_hm/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_relbench_rel_hm/src/: data.py  pyproject.toml
dataset_iter1_relbench_rel_st/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter1_relbench_rel_st/src/: data.py  mini_data_out.json  preview_data_out.json  pyproject.toml
dataset_iter2_relbench_rel_av/demo/: data_code_demo.ipynb  demo_result.json  mini_demo_data.json
dataset_iter2_relbench_rel_av/src/: data.py  extract_relbench_avito.py  mini_data_out.json  pyproject.toml
evaluation_iter3_cross_dataset_j/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter3_cross_dataset_j/src/: eval.py  eval_full_results.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter4_cross_dataset_j/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter4_cross_dataset_j/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter5_definitive_cros/demo/: demo_result.json  eval_code_demo.ipynb
evaluation_iter5_definitive_cros/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter6_definitive_pape/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_definitive_pape/src/: eval.py  full_eval_out.json  mini_eval_out.json  pyproject.toml
evaluation_iter6_meta_analysis_o/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter6_meta_analysis_o/src/: eval.py  eval_out.json  full_eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_figure_ready_da/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_figure_ready_da/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_final_integrati/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_final_integrati/src/: eval.py  full_eval_out.json  preview_eval_out.json  pyproject.toml
evaluation_iter7_negative_result/demo/: demo_result.json  eval_code_demo.ipynb  mini_demo_data.json
evaluation_iter7_negative_result/src/: eval.py  eval_out.json  mini_eval_out.json  preview_eval_out.json  pyproject.toml
experiment_iter2_jrn_estimation/demo/: demo_result.json  method_code_demo.ipynb
experiment_iter2_jrn_estimation/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter2_training_free_v/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter2_training_free_v/src/: detailed_results.json  method.py  method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_gbm_based_jrn_e/demo/: demo_result.json  method_code_demo.ipynb
experiment_iter3_gbm_based_jrn_e/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_gbm_probe_jrn_e/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_gbm_probe_jrn_e/src/: method.py  method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_jrn_guided_hete/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_jrn_guided_hete/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter3_phase_2_gbm_bas/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter3_phase_2_gbm_bas/src/: method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_jrn_fk_shufflin/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter4_jrn_fk_shufflin/src/: full_method_out.json  method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter4_jrn_guided_hete/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter4_jrn_guided_hete/src/: method.py  method_out.json  method_results_full.json  preview_method_out.json  pyproject.toml
experiment_iter4_jrn_multiplicat/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter4_jrn_multiplicat/src/: full_method_out.json  method.py  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter5_gbm_compounding/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter5_gbm_compounding/src/: full_method_out.json  method.py  method_out.json  preview_method_out.json  pyproject.toml
experiment_iter5_gbm_probe_jrn_e/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter5_gbm_probe_jrn_e/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
experiment_iter5_jrn_probe_cost/demo/: demo_result.json  method_code_demo.ipynb  mini_demo_data.json
experiment_iter5_jrn_probe_cost/src/: full_method_out.json  method.py  (+2 more)
experiment_iter7_jrn_probe_cost/src/: method.py  method_out.json  mini_method_out.json  preview_method_out.json  pyproject.toml
paper_latex/: references.bib
(+55 files in other folders)
