[project]
name = "data-relstack"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "relbench==2.1.1",
    "pandas==2.3.3",
    "numpy==2.2.6",
    "loguru==0.7.3",
    "pyarrow==23.0.1",
    "scikit-learn==1.6.1",
    "scipy==1.15.3",
    "datasets==4.6.1",
    "pooch==1.9.0",
    "dill==0.4.0",
    "tqdm==4.67.3",
    "requests==2.32.5",
    "huggingface-hub==1.6.0",
]
