[project]
name = "jrn-cross-dataset-eval"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "diptest==0.10.0",
    "fonttools==4.61.1",
    "joblib==1.5.3",
    "kiwisolver==1.4.9",
    "loguru==0.7.3",
    "matplotlib==3.10.8",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "pillow==12.1.1",
    "psutil==7.2.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "scikit-learn==1.8.0",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
]
