[project]
name = "eval-jrn-consolidation"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "numpy==2.4.2",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "loguru==0.7.3",
    "psutil==7.2.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends._legacy:_Backend"
