[project]
name = "jrn-fk-shuffling"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "lightgbm==4.6.0",
    "pandas==3.0.1",
    "numpy==2.4.2",
    "scipy==1.17.1",
    "scikit-learn==1.8.0",
    "loguru==0.7.3",
    "joblib==1.5.3",
    "python-dateutil==2.9.0.post0",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
]
