[project]
name = "jrn-experiment"
version = "0.1.0"
requires-python = ">=3.10,<3.12"
dependencies = [
    "relbench==2.1.1",
    "lightgbm==4.6.0",
    "scikit-learn==1.6.1",
    "pandas==3.0.1",
    "numpy==2.4.2",
    "loguru==0.7.3",
    "scipy==1.17.1",
    "psutil==7.2.2",
    "torch==2.10.0",
]
