[project]
name = "jrn-probe-cost-efficiency-rel-stack"
version = "1.0.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "PyYAML==6.0.3",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aiosignal==1.4.0",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "datasets==4.6.1",
    "dill==0.4.0",
    "duckdb==1.4.4",
    "filelock==3.25.0",
    "frozenlist==1.8.0",
    "fsspec==2026.2.0",
    "huggingface_hub==1.6.0",
    "idna==3.11",
    "joblib==1.5.3",
    "lightgbm==4.6.0",
    "loguru==0.7.3",
    "multidict==6.7.1",
    "multiprocess==0.70.18",
    "numpy==2.4.3",
    "packaging==26.0",
    "pandas==3.0.1",
    "pooch==1.9.0",
    "pyarrow==23.0.1",
    "python-dateutil==2.9.0.post0",
    "relbench==2.1.1",
    "requests==2.32.5",
    "scikit-learn==1.6.1",
    "scipy==1.17.1",
    "six==1.17.0",
    "threadpoolctl==3.6.0",
    "tqdm==4.67.3",
    "typing_extensions==4.15.0",
    "urllib3==2.6.3",
    "xxhash==3.6.0",
]
